Bug 471999 - Cannot configure previews
Summary: Cannot configure previews
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2023-07-06 11:27 UTC by Patrick Silva
Modified: 2023-07-08 22:20 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2023-07-06 11:27:12 UTC
STEPS TO REPRODUCE
1. open Dolphin
2. open Dolphin settings and click on "Previews" tab
3. ty to check/uncheck any preview

OBSERVED RESULT
clicks on the checkboxes have no effect

EXPECTED RESULT
we can check/uncheck previews

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.27.80
KDE Frameworks Version: 5.240.0
Qt Version: 6.5.1
Graphics Platform: Wayland
Comment 1 Bug Janitor Service 2023-07-08 20:35:00 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/dolphin/-/merge_requests/568
Comment 2 Nicolas Fella 2023-07-08 22:20:32 UTC
Git commit 31a8866ac0aa3966cd77e87e14974f0a6a66f940 by Nicolas Fella.
Committed on 08/07/2023 at 22:11.
Pushed by nicolasfella into branch 'kf6'.

Fix usage of Qt::CheckStateRole in preview model

Qt::CheckStateRole expects an enum, not a bool

Also set the flag that the item it user checkable, otherwise it can't be changed

M  +3    -3    src/settings/contextmenu/contextmenusettingspage.cpp
M  +2    -2    src/settings/general/previewssettingspage.cpp
M  +2    -2    src/settings/serviceitemdelegate.cpp
M  +7    -2    src/settings/servicemodel.cpp
M  +2    -1    src/settings/servicemodel.h

https://invent.kde.org/system/dolphin/-/commit/31a8866ac0aa3966cd77e87e14974f0a6a66f940