Fix usage of Qt::CheckStateRole in preview model

Qt::CheckStateRole expects an enum, not a bool

Also set the flag that the item it user checkable, otherwise it can't be changed

BUG: 471999